--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "league/flysystem": "^1.0",
-        "tymon/jwt-auth": "1.0.0-rc.5"
+        "tymon/jwt-auth": "1.0.0-rc.5",
+        "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
