--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-gd": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "league/flysystem": "^1.0",
-        "tymon/jwt-auth": "1.0.0-rc.5",
-        "ext-gd": "*"
+        "pusher/pusher-php-server": "^4.1",
+        "tymon/jwt-auth": "1.0.0-rc.5"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
